--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=twitter-clone
+server.port=5454
+
+#db specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/twitter_youtube
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+
+
+spring.jpa.hibernate.ddl-auto=update
