--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=root
 
 
 spring.jpa.hibernate.ddl-auto=update
+
+razorpay.api.key=rzp_test_eFa5uNv94HKYe6
+razorpay.api.secret=NyiIQC53dYrL3r
