--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,15 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-<!--		<dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/com.razorpay/razorpay-java -->
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.5</version>
+		</dependency>
+
+		<!--		<dependency>-->
 <!--			<groupId>org.apache.tomcat.embed</groupId>-->
 <!--			<artifactId>tomcat-embed-core</artifactId>-->
 <!--			<version>10.1.18</version>-->
